# ai-compilance

./: .cursorrules  .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.impeccable/: design.json
docs/: README.md  api-contract.md  cost-model.md  data-model.md  (+1 more)
services/api/: AGENTS.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py  002_phase2_monetization_docs.py
services/api/app/: config.py  main.py  models.py  schemas.py  storage.py
services/api/app/admin_api/: TESTING.md  deps.py  routes.py
services/api/app/dal/: assessments.py
services/api/app/data/: pseo_catalog.py
services/api/app/documents/: context_builder.py  docx_builder.py  labels.py  official_sections.py  pack.py  renderers.py  spec.py
services/api/app/public_api/: TESTING.md  assessments.py  documents.py  pages.py
services/api/app/rules/: conditions.py  engine.py  priorities.py
services/api/app/scripts/: generate_pseo.py  seed.py  seed_obligations.py
services/api/app/services/: assessment_facts.py  assessment_service.py  classification_service.py  document_service.py  email_service.py  payment_service.py  seo_service.py
services/api/app/workers/: generate_document.py
services/api/tests/: README.md  test_assessment_facts.py  test_document_idempotency.py  test_documents.py  test_dodo_payments.py  test_official_templates.py  test_risk_engine.py  test_seo.py  test_storage.py
services/api/tests/fixtures/: risk_engine_cases.json
(+56 files in other folders)
